# autoperf

./: .gitignore  .travis.yml  AUTHORS  Cargo.toml  LICENSE  README.md  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md
analyze/: __init__.py  clustering.py  find_max_acc_svmscale.py  find_min_error_heatmap.py  main.py  r_values_nbody.csv  rvalues.py  svmweights.py  util.py  yesno.py
analyze/classify/: Feature weights.ipynb  SVM_feature_weights.ipynb  __init__.py  all_zero_events.py  decisiontree.py  extract_all.py  featuredifference.py  find_all_zero.py  fselect_rfecv.py  generate_matrix.py  matrix_all.py  mlxranking.py  ranking.py  runtimes.py  stacked_bar.html  svm.py  svm_heatmap.py  svm_heatmap_socket.py  svm_machine_aware.py  svm_machine_aware_heatmap.py  svm_smtscaling.py  svm_topk.py  svm_topk_aware_heatmap.py  svmselect.py  svr.py
analyze/pair/: matrix_all.py  runtimes.py  svm.py  svm_topk.py  svr.py
analyze/profile/: compare_timeseries.py  correlation.py  event_detail.py  plot_correlation_heatmap.py  stats.py  timeseries.py
analyze/stats/: plot_arch_heatmap.py  plot_cdf.py  plot_cdf_haswellx.py  plot_cdf_ivytownep.py  plot_counts.py
analyze/templates/: events.html  rvalues.html  svmweights.html  yesno.html
doc/: manual.md  results.csv  timeseries.csv
scripts/: correlation.py  ethplot.mplstyle  information_gain.py  pair_runtime_heatmap.py  plot_event.py  plot_heatmap.py  read_result.py  results_correlation.py  results_to_pivot.py  stats.py  stats_cdf.py  stats_count.py  stats_heatmap.py  util.py
src/: aggregate.rs  cmd.yml  counters.toml  event_stats.rs  extract.rs  main.rs  mkgroup.rs  pair.rs  profile.rs  scale.rs  search.rs  stats.rs  unknown_events.rs  util.rs
tests/: test_readme.sh
(+32 files in other folders)
