[package]
name = "autoperf"
version = "0.1.0"
authors = [
    "Denny Lin <dennylin93@hs.ntnu.edu.tw>",
    "Besmira Nushi <nushib@inf.ethz.ch>",
    "Gerd Zellweger <mail@gerdzellweger.com>"
]

[dependencies]
pbr = "0.3.*"
log = "0.3"
env_logger = "0.3"
csv = "0.*"
lazy_static = "0.1.*"
perfcnt = "0.3.*"
toml = "0.2"
nom = "^1.2.3"
libc = "0.2.16"
clap = { version = "2", features = ["yaml"] }
x86 = { path = "../rust-x86/" }
phf = "0.7.*"
itertools = "0.5"
rustc-serialize = "0.3"
wait-timeout = "0.1"
