[package]
name = "autoperf"
version = "0.9"
authors = [
    "Denny Lin <dennylin93@connect.hku.hk>",
    "Besmira Nushi <besmira.nushi@microsoft.com>",
    "Gerd Zellweger <mail@gerdzellweger.com>"
]
edition = '2018'

[dependencies]
pbr = "1.0.1"
log = "0.4"
env_logger = "0.6"
csv = "0.*"
lazy_static = "0.1.*"
perfcnt = "0.*"
toml = "0.2"
nom = "^1.2.3"
libc = "0.2.16"
clap = { version = "2", features = ["yaml"] }
x86 = { version = "0.16.2", features = ["performance-counter"] }
phf = "0.7.*"
itertools = "0.5"
rustc-serialize = "0.3"
wait-timeout = "0.1"
